Added path stuff to bash_profile template so the VM is aware of grunt, and made sure to run grunt from /vagrant

--- a/ansible/roles/start-grunt-watch/templates/bash_profile.j2
+++ b/ansible/roles/start-grunt-watch/templates/bash_profile.j2
@@ -1,3 +1,5 @@
-cd {{ project_webroot }};
+export PATH=/vagrant/node_modules/.bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games
+
+cd /vagrant;
 
 grunt watch;
