Sass globbing and grunt config; working a treat

--- a/html/css/output/patterns/02-buttons-and-calls-to-action.css
+++ b/html/css/output/patterns/02-buttons-and-calls-to-action.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /* Buttons / CTAs */
 .cta {
-  background-color: #00a2bb;
+  background-color: #00A2BB;
   color: #fff;
   border-bottom: 0.2em solid #007688;
   border-top: 0.1em solid #1ce1fe;
@@ -13,87 +13,67 @@
   -moz-transition: background-color 0.12s ease-in-out;
   -ms-transition: background-color 0.12s ease-in-out;
   -o-transition: background-color 0.12s ease-in-out;
-  transition: background-color 0.12s ease-in-out;
-}
-.cta:after {
-  content: ' »';
-}
-.cta:hover {
-  text-decoration: underline;
-  background-color: #00b8d4;
-}
+  transition: background-color 0.12s ease-in-out; }
+  .cta:after {
+    content: ' »'; }
+  .cta:hover {
+    text-decoration: underline;
+    background-color: #00b8d4; }
 
 /* Removes awkward default styles on some inputs for mobile */
-input[type="button"],
-input[type="reset"],
-input[type="submit"] {
+input[type="button"], input[type="reset"], input[type="submit"] {
   -webkit-appearance: none;
   -moz-appearance: none;
-  appearance: none;
-}
+  appearance: none; }
 
 /* Removes awkward UA side borders set, and pads to right height */
-button,
-input[type="button"],
-input[type="reset"],
-input[type="submit"] {
+button, input[type="button"], input[type="reset"], input[type="submit"] {
   border-left: 0;
   border-right: 0;
-  height: 3em;
-}
+  height: 3em; }
 
 .cta--charcoal {
-  background-color: #1a1919;
+  background-color: #1A1919;
   border-bottom: 0.2em solid #797979;
-  border-top: 0.1em solid #ebebeb;
-}
-.cta--charcoal:hover {
-  text-decoration: underline;
-  background-color: #494646;
-}
+  border-top: 0.1em solid #ebebeb; }
+  .cta--charcoal:hover {
+    text-decoration: underline;
+    background-color: #494646; }
 
 .cta--blue {
-  background-color: #085fb1;
+  background-color: #085FB1;
   border-bottom: 0.2em solid #064580;
-  border-top: 0.1em solid #429ff6;
-}
-.cta--blue:hover {
-  text-decoration: underline;
-  background-color: #0a79e2;
-}
+  border-top: 0.1em solid #429ff6; }
+  .cta--blue:hover {
+    text-decoration: underline;
+    background-color: #0a79e2; }
 
 .cta--purple {
-  background-color: #612b8f;
+  background-color: #612B8F;
   border-bottom: 0.2em solid #411d60;
-  border-top: 0.1em solid #a168d2;
-}
-.cta--purple:hover {
-  text-decoration: underline;
-  background-color: #7634ae;
-}
+  border-top: 0.1em solid #a168d2; }
+  .cta--purple:hover {
+    text-decoration: underline;
+    background-color: #7634ae; }
 
 .cta--white {
-  background-color: white;
-  color: #1a1919;
+  background-color: #ffffff;
+  color: #1A1919;
   border-bottom: 0.2em solid #9f9f9f;
-  border-top: 0.1em solid white;
-}
-.cta--white:hover {
-  text-decoration: underline;
-  background-color: #cdf8ff;
-}
+  border-top: 0.1em solid white; }
+  .cta--white:hover {
+    text-decoration: underline;
+    background-color: #cdf8ff; }
 
 .cta--disabled {
-  background-color: #c3c3c3;
+  background-color: #C3C3C3;
   color: #868686;
   border-bottom: 0.2em solid #9f9f9f;
   border-top: 0.1em solid #d0d0d0;
-  cursor: not-allowed;
-}
-.cta--disabled:hover {
-  background-color: #c3c3c3;
-  cursor: not-allowed;
-  text-decoration: none;
-}
+  cursor: not-allowed; }
+  .cta--disabled:hover {
+    background-color: #C3C3C3;
+    cursor: not-allowed;
+    text-decoration: none; }
 
 /*# sourceMappingURL=02-buttons-and-calls-to-action.css.map */
