--- a/html/css/sass/patterns/0-footer.scss
+++ b/html/css/sass/patterns/0-footer.scss
@@ -1,5 +1,5 @@
 // StyleGuide Imports (dependencies for this pattern): 
-@import '_2-mixins.scss'; @import '_4-colours.scss';
+@import '../_2-mixins.scss'; @import '../_4-colours.scss';
 
 // Mobile-first - stacking header with 100% wide
 // sections, then enhanced via media query
