--- a/html/css/sass/patterns/03-blockquote.scss
+++ b/html/css/sass/patterns/03-blockquote.scss
@@ -1,5 +1,5 @@
 // Ignore - Pattern uses mixins, which have to be imported directly
-@import '_2-mixins.scss', '_4-colours.scss';
+@import '../_2-mixins.scss', '../_4-colours.scss';
 
 .quote {
 	margin: 1.5em 0;
