--- a/html/css/sass/patterns/07-form-fields.scss
+++ b/html/css/sass/patterns/07-form-fields.scss
@@ -1,5 +1,5 @@
 // StyleGuide Imports (dependencies for this pattern): 
-@import '_2-mixins.scss'; @import '_4-colours.scss';
+@import '../_2-mixins.scss'; @import '../_4-colours.scss';
 
 /* Forms */
 
