--- a/html/css/output/patterns/01-blocks.css
+++ b/html/css/output/patterns/01-blocks.css
@@ -4,214 +4,162 @@
    should be applied to a container around the object */
 .outside {
   width: 100%;
-  padding-left: 1.4em;
-}
-@media only all and (min-width: 41em) {
-  .outside {
-    width: 90%;
-    margin: 0 auto;
-    padding: 0;
-    max-width: 80em;
-  }
-}
+  padding-left: 1.4em; }
+  @media only all and (min-width: 41em) {
+    .outside {
+      width: 90%;
+      margin: 0 auto;
+      padding: 0;
+      max-width: 80em; } }
 
 /* Blocks - Mobile-first styles */
 .block {
-  background-color: white;
+  background-color: #ffffff;
   display: inline-block;
   margin-bottom: 1.5em;
   width: 100%;
-  border-bottom: 0.2em solid #9f9f9f;
-}
+  border-bottom: 0.2em solid #9f9f9f; }
 
 /* /// Block colours */
 .block--aqua {
-  background-color: #00a2bb;
-  border-bottom: 0.2em solid #007f92;
-}
+  background-color: #00A2BB;
+  border-bottom: 0.2em solid #007f92; }
 
 .block--dark-aqua {
   background-color: #015966;
-  color: white;
-  border-bottom: 0.2em solid #003a43;
-}
+  color: #ffffff;
+  border-bottom: 0.2em solid #003a43; }
 
 .block--charcoal {
-  background-color: #1a1919;
-  color: white;
-  border-bottom: 0.2em solid #4e4b4b;
-}
+  background-color: #1A1919;
+  color: #ffffff;
+  border-bottom: 0.2em solid #4e4b4b; }
 
 /* /// Top trim - only for blocks with no header bar */
 .block--trim-top-aqua {
-  border-top: 0.4em solid #01b2cc;
-}
+  border-top: 0.4em solid #01B2CC; }
 
 .block--trim-top-dark-aqua {
-  border-top: 0.4em solid #015966;
-}
+  border-top: 0.4em solid #015966; }
 
 .block--trim-top-charcoal {
-  border-top: 0.4em solid #1a1919;
-}
+  border-top: 0.4em solid #1A1919; }
 
 /* /// Bottom trim should only be used on white blocks */
 .block--trim-bottom-aqua {
-  border-bottom: 0.2em solid #007f92;
-}
-.block--trim-bottom-aqua:after {
-  content: "";
-  display: inline-block;
-  float: left;
-  width: 100%;
-  height: 0.3em;
-  margin-top: 0.4em;
-  background-color: #00a2bb;
-}
+  border-bottom: 0.2em solid #007f92; }
+  .block--trim-bottom-aqua:after {
+    content: "";
+    display: inline-block;
+    float: left;
+    width: 100%;
+    height: 0.3em;
+    margin-top: 0.4em;
+    background-color: #00A2BB; }
 
 .block--trim-bottom-dark-aqua {
-  border-bottom: 0.2em solid #003a43;
-}
-.block--trim-bottom-dark-aqua:after {
-  content: "";
-  display: inline-block;
-  float: left;
-  width: 100%;
-  height: 0.3em;
-  margin-top: 0.4em;
-  background-color: #015966;
-}
+  border-bottom: 0.2em solid #003a43; }
+  .block--trim-bottom-dark-aqua:after {
+    content: "";
+    display: inline-block;
+    float: left;
+    width: 100%;
+    height: 0.3em;
+    margin-top: 0.4em;
+    background-color: #015966; }
 
 .block--trim-bottom-charcoal {
-  border-bottom: 0.2em solid #4e4b4b;
-}
-.block--trim-bottom-charcoal:after {
-  content: "";
-  display: inline-block;
-  float: left;
-  width: 100%;
-  height: 0.3em;
-  margin-top: 0.4em;
-  background-color: #1a1919;
-}
+  border-bottom: 0.2em solid #4e4b4b; }
+  .block--trim-bottom-charcoal:after {
+    content: "";
+    display: inline-block;
+    float: left;
+    width: 100%;
+    height: 0.3em;
+    margin-top: 0.4em;
+    background-color: #1A1919; }
 
 /* /// Block heading bars */
 .block__heading {
   padding: 0.7em 1.4em 0.6em 1.4em;
-  background-color: #1a1919;
-  color: white;
-}
+  background-color: #1A1919;
+  color: #ffffff; }
 
 .block__heading .heading {
-  font-size: 1.2em;
-}
+  font-size: 1.2em; }
 
 .block__heading--aqua {
-  background-color: #00a2bb;
-}
+  background-color: #00A2BB; }
 
 .block__heading--dark-aqua {
-  background-color: #015966;
-}
+  background-color: #015966; }
 
 /* Padding tweaks; if using a heading bar the same
 colour as the block, give the title text a little more breathing room vertically */
-.block--aqua .block__heading--aqua,
-.block--dark-aqua .block__heading--dark-aqua,
-.block--charcoal .block__heading {
-  padding: 1.2em 1.4em 0.4em 1.4em;
-}
+.block--aqua .block__heading--aqua, .block--dark-aqua .block__heading--dark-aqua, .block--charcoal .block__heading {
+  padding: 1.2em 1.4em 0.4em 1.4em; }
 
-.block--charcoal .block__heading--aqua,
-.block--charcoal .block__heading--dark-aqua {
-  padding: 0.7em 1.4em 0.6em 1.4em;
-}
+.block--charcoal .block__heading--aqua, .block--charcoal .block__heading--dark-aqua {
+  padding: 0.7em 1.4em 0.6em 1.4em; }
 
 /* /// Block Content */
 .block__content {
   padding: 1.2em 1.4em 1.4em 1.4em;
   margin: 0 0 0 0;
   font-size: 1.1em;
-  line-height: 1.3em;
-}
+  line-height: 1.3em; }
 
 .block__content--left {
   width: 50%;
-  float: left;
-}
+  float: left; }
 
 .block__content--right {
   width: 50%;
-  float: right;
-}
+  float: right; }
 
 /* /// Blocks with Images */
 .block__image {
   background-position: center;
-  background-repeat: no-repeat;
-}
+  background-repeat: no-repeat; }
 
 .block__image--top {
-  margin-bottom: 0.5em;
-}
+  margin-bottom: 0.5em; }
 
 .block__image--bottom {
-  margin-top: 0.5em;
-}
+  margin-top: 0.5em; }
 
 .block__image--right {
   width: 50%;
-  float: right;
-}
+  float: right; }
 
 .block__image--left {
   width: 50%;
-  float: left;
-}
+  float: left; }
 
 .block__image--right, .block__image--left {
-  background-position: center bottom;
-}
+  background-position: center bottom; }
 
 @media only all and (min-width: 41em) {
   /* Block changes */
   .block {
     margin: 0 1.5% 2em 1.5%;
-    float: left;
-  }
-
+    float: left; }
   /* Layout Classes */
   .block--25 {
-    width: 22%;
-  }
-
+    width: 22%; }
   .block--33 {
-    width: 30.3%;
-  }
-
+    width: 30.3%; }
   .block--40 {
-    width: 37%;
-  }
-
+    width: 37%; }
   .block--50 {
-    width: 47%;
-  }
-
+    width: 47%; }
   .block--60 {
-    width: 57%;
-  }
-
+    width: 57%; }
   .block--66 {
-    width: 63.6%;
-  }
-
+    width: 63.6%; }
   .block--75 {
-    width: 72%;
-  }
-
+    width: 72%; }
   .block--100 {
-    width: 97%;
-  }
-}
+    width: 97%; } }
 
 /*# sourceMappingURL=01-blocks.css.map */
