--- a/html/css/output/patterns/07-form-fields.css
+++ b/html/css/output/patterns/07-form-fields.css
@@ -1,21 +1,5 @@
 /* Forms */
-input[type="email"],
-input[type="number"],
-input[type="search"],
-input[type="text"],
-input[type="tel"],
-input[type="url"],
-input[type="password"],
-input[list],
-input[type="file"],
-input[type="date"],
-input[type="month"],
-input[type="week"],
-input[type="time"],
-input[type="range"],
-input[type="search"],
-textarea,
-select {
+input[type="email"], input[type="number"], input[type="search"], input[type="text"], input[type="tel"], input[type="url"], input[type="password"], input[list], input[type="file"], input[type="date"], input[type="month"], input[type="week"], input[type="time"], input[type="range"], input[type="search"], textarea, select {
   display: inline-block;
   height: 2.375em;
   width: 100%;
@@ -24,117 +8,80 @@ select {
   /* ^ The 0.375em vertically centers text on FF, 
   ignored by Webkit */
   background-color: #fff;
-  border: 0.1em solid #c3c3c3;
-  box-shadow: none;
-}
+  border: 0.1em solid #C3C3C3;
+  box-shadow: none; }
 
 .checkbox {
   display: inline-block;
-  margin: 1em 1.5em 2em 0;
-}
+  margin: 1em 1.5em 2em 0; }
 
 .checkbox input {
-  margin-right: 0.5em;
-}
+  margin-right: 0.5em; }
 
 /* Removes awkward default styles on some inputs for mobile */
-input[type="email"],
-input[type="number"],
-input[type="search"],
-input[type="text"],
-input[type="tel"],
-input[type="url"],
-input[type="password"],
-input[list],
-textarea {
+input[type="email"], input[type="number"], input[type="search"], input[type="text"], input[type="tel"], input[type="url"], input[type="password"], input[list], textarea {
   -webkit-appearance: none;
   -moz-appearance: none;
-  appearance: none;
-}
+  appearance: none; }
 
 textarea {
   min-height: 4.0625em;
   padding-top: 0.375em;
   padding-bottom: 0.375em;
-  margin-bottom: 1em;
-}
+  margin-bottom: 1em; }
 
-input[type="email"]:focus,
-input[type="number"]:focus,
-input[type="search"]:focus,
-input[type="text"]:focus,
-input[type="tel"]:focus,
-input[type="url"]:focus,
-input[type="password"]:focus,
-input[list]:focus,
-textarea:focus,
-select:focus {
-  border: 0.1em solid #00a2bb;
-  outline: 0;
-}
+input[type="email"]:focus, input[type="number"]:focus, input[type="search"]:focus, input[type="text"]:focus, input[type="tel"]:focus, input[type="url"]:focus, input[type="password"]:focus, input[list]:focus, textarea:focus, select:focus {
+  border: 0.1em solid #00A2BB;
+  outline: 0; }
 
-label,
-legend {
+label, legend {
   display: block;
   font-size: 1em;
   margin-bottom: 0.4em;
-  font-weight: 500;
-}
+  font-weight: 500; }
 
 fieldset {
   padding: 0;
   margin-bottom: 1.5em;
   border-width: 0;
-  border: 0;
-}
+  border: 0; }
 
 fieldset ul {
-  list-style-type: none;
-}
+  list-style-type: none; }
 
 input[type="checkbox"] {
-  display: inline;
-}
+  display: inline; }
 
 input[type="radio"] {
   display: inline-block;
-  margin-bottom: 0.5em;
-}
+  margin-bottom: 0.5em; }
 
 .required {
   font-weight: 400;
-  color: #767676;
-}
+  color: #767676; }
 
 .format {
   font-weight: 400;
   font-style: italic;
   color: #767676;
-  margin-left: 0.75em;
-}
+  margin-left: 0.75em; }
 
 input[type="search"] {
-  box-sizing: border-box;
-}
+  box-sizing: border-box; }
 
 select[multiple] {
-  height: auto;
-}
+  height: auto; }
 
 textarea[disabled], input[disabled], select[disabled] {
   background-color: #dddddd;
-  color: #9f9f9f;
-}
+  color: #9f9f9f; }
 
 textarea[disabled]:hover, input[disabled]:hover, select[disabled]:hover {
-  cursor: not-allowed;
-}
+  cursor: not-allowed; }
 
 select:-internal-list-box option:checked {
-  background-color: #01b2cc;
-}
+  background-color: #01B2CC; }
 
 /* Form buttons are covered in the 'Buttons
   and calls to action' section above */
-
 /*# sourceMappingURL=07-form-fields.css.map */
