--- a/html/css/output/patterns/08-feedback.css
+++ b/html/css/output/patterns/08-feedback.css
@@ -1,9 +1,8 @@
 .feedback {
-  background-color: #d9f2f9;
+  background-color: #D9F2F9;
   border-bottom: 0.2em solid #b6e6f3;
   font-weight: 500;
   padding: 0.8em 1.4em;
-  margin: 0 0 1.5em 0;
-}
+  margin: 0 0 1.5em 0; }
 
 /*# sourceMappingURL=08-feedback.css.map */
