--- a/html/css/output/patterns/11-images-with-captions.css
+++ b/html/css/output/patterns/11-images-with-captions.css
@@ -1,24 +1,20 @@
 .image {
   display: inline-block;
   margin: 0 0 2em 0;
-  max-width: 100%;
-}
+  max-width: 100%; }
 
 .image img {
   max-width: 100%;
-  display: block;
-}
+  display: block; }
 
 .image__caption {
   display: inline-block;
   width: 100%;
   background-color: #d0d0d0;
-  padding: 0.3em 0.8em 0.4em 0.8em;
-}
+  padding: 0.3em 0.8em 0.4em 0.8em; }
 
 .image__caption a {
   color: #015966;
-  border-color: #015966;
-}
+  border-color: #015966; }
 
 /*# sourceMappingURL=11-images-with-captions.css.map */
