--- a/html/css/output/patterns/13-responsive-tables.css
+++ b/html/css/output/patterns/13-responsive-tables.css
@@ -4,18 +4,15 @@ table {
   border: 0;
   padding-bottom: 0;
   display: block;
-  width: 100%;
-}
+  width: 100%; }
 
 /* make sure captions are displayed */
 caption {
-  display: block;
-}
+  display: block; }
 
 /* hide the thead in an accessible fashion */
 thead {
-  display: none;
-}
+  display: none; }
 
 /* make everything display block so it 
  aligns vertically */
@@ -24,8 +21,7 @@ tbody, tr, th, td {
   padding: 0;
   display: block;
   text-align: left;
-  white-space: normal;
-}
+  white-space: normal; }
 
 /* Labeling:
 Adding a data-title attribute to the cells
@@ -37,20 +33,16 @@ Markup:
 
 Display:
 Column Header: Content Here */
-th[data-title]:before,
-td[data-title]:before {
+th[data-title]:before, td[data-title]:before {
   content: attr(data-title) ":\00A0";
-  font-weight: 500;
-}
+  font-weight: 500; }
 
 th:not([data-title]) {
-  font-weight: 500;
-}
+  font-weight: 500; }
 
 /* hide empty cells*/
 td:empty {
-  display: none;
-}
+  display: none; }
 
 /* Table styling time */
 tr {
@@ -60,9 +52,8 @@ tr {
   font-size: 1.1em;
   background-color: #dddddd;
   border-top: 0.2em solid #015966;
-  border-bottom: 0.2em solid #c3c3c3;
-  padding: 1em;
-}
+  border-bottom: 0.2em solid #C3C3C3;
+  padding: 1em; }
 
 /* Arbitrary breakpoint from handheld -> 
 full layout - your choice should vary depending 
@@ -76,96 +67,60 @@ by side rather than stacked */
     margin: 0 0 2em 0;
     border-style: none;
     border-top-width: 0;
-    border-bottom: 0.2em solid #c3c3c3;
-  }
-
+    border-bottom: 0.2em solid #C3C3C3; }
   /* Labeling
    * Hide the mobile labels */
-  th[data-title]:before,
-  td[data-title]:before {
+  th[data-title]:before, td[data-title]:before {
     content: "";
-    font-weight: 500;
-  }
-
+    font-weight: 500; }
   th:not([data-title]) {
-    font-weight: 500;
-  }
-
+    font-weight: 500; }
   /* re-show empty cells*/
   td:empty {
-    display: table-cell;
-  }
-
+    display: table-cell; }
   /* show the thead again */
   thead, tbody {
-    display: table-header-group;
-  }
-
+    display: table-header-group; }
   /* make everything display regularly again */
   tr, th, td {
     border: 0;
     display: table-cell;
     padding: 0;
     text-align: left;
-    white-space: normal;
-  }
-
+    white-space: normal; }
   tr {
     border-style: none;
     border-bottom-width: 0;
     display: table-row;
-    width: 100%;
-  }
-
+    width: 100%; }
   th, td {
     border-style: none;
     padding: 0 1em 0 0.3em;
     text-align: left;
-    vertical-align: top;
-  }
-
-  thead th,
-  tr.index th {
+    vertical-align: top; }
+  thead th, tr.index th {
     font-weight: 400;
     line-height: 1.25em;
-    text-transform: uppercase;
-  }
-
+    text-transform: uppercase; }
   thead th {
-    padding-bottom: 0.25em;
-  }
-
+    padding-bottom: 0.25em; }
   tbody:first-of-type tr.index th {
-    padding-top: 1em;
-  }
-
+    padding-top: 1em; }
   tbody th {
-    font-weight: normal;
-  }
-
+    font-weight: normal; }
   /* Style table */
   thead tr {
-    background-color: #015966;
-  }
-
+    background-color: #015966; }
   thead tr th {
     color: #fff;
-    padding: 0.5em 0.5em 0.5em 0.8em;
-  }
-
+    padding: 0.5em 0.5em 0.5em 0.8em; }
   tbody tr td {
-    padding: 0.8em 0.8em 0.8em 0.8em;
-  }
-
+    padding: 0.8em 0.8em 0.8em 0.8em; }
   tbody tr th b {
     display: inline-block;
     margin: 0 0 0 0.5em;
-    padding: 0.8em 0 0 0;
-  }
-
+    padding: 0.8em 0 0 0; }
   tbody tr:nth-child(odd) {
-    background-color: #f6f6f6;
-  }
-}
+    background-color: #f6f6f6; } }
 
 /*# sourceMappingURL=13-responsive-tables.css.map */
