--- a/html/css/sass/global.scss
+++ b/html/css/sass/global.scss
@@ -12,4 +12,4 @@
 
 @import '_6-guide.scss';
 
-@import 'patterns/*.*';
+@import '_Patterns-ImportMap.scss'; // auto-generated file created from /patterns by grunt-sass-globbing
