--- a/html/css/sass/patterns/11-images-with-captions.scss
+++ b/html/css/sass/patterns/11-images-with-captions.scss
@@ -1,5 +1,5 @@
 // StyleGuide Imports (dependencies for this pattern): 
-@import '_4-colours.scss';
+@import '../_4-colours.scss';
 
 .image {
   display: inline-block;
