--- a/html/css/sass/patterns/13-responsive-tables.scss
+++ b/html/css/sass/patterns/13-responsive-tables.scss
@@ -1,5 +1,5 @@
 // StyleGuide Imports (dependencies for this pattern): 
-@import '_4-colours.scss';
+@import '../_4-colours.scss';
 
 /* /// Responsive Tables */
 
