--- a/html/css/output/global.css
+++ b/html/css/output/global.css
@@ -452,6 +452,39 @@ a {
 font-family: "franklin-gothic-urw";
 
 //////// */
+.nav-wrapper {
+  background-color: #101010; }
+  @media only all and (min-width: 41em) {
+    .nav-wrapper {
+      width: 25vw;
+      height: 100vh;
+      position: fixed;
+      overflow-y: scroll;
+      float: left; } }
+
+.nav-wrapper__list li {
+  list-style-type: none;
+  margin: 0;
+  padding: 0.65em 1.25em 0.85em; }
+
+.nav-wrapper__list .test-mode {
+  background-color: #952121; }
+
+.nav-wrapper__list li:nth-child(2n) {
+  background-color: #121212; }
+
+.nav-wrapper__list a {
+  color: #fff;
+  border-bottom: 0.1em dotted #ccc;
+  margin: 0;
+  padding: 0; }
+
+@media only all and (min-width: 41em) {
+  .body-wrapper {
+    float: left;
+    width: 75vw;
+    margin-left: 25vw; } }
+
 .guide {
   background-color: #C3C3C3;
   line-height: 1.5em;
@@ -472,6 +505,9 @@ font-family: "franklin-gothic-urw";
   margin-right: 0.6em;
   display: inline;
   vertical-align: -0.15em; }
+
+.lowercase {
+  text-transform: lowercase; }
 
 .versioninfo {
   font-size: 1.1em;
