--- a/html/css/sass/_6-guide.scss
+++ b/html/css/sass/_6-guide.scss
@@ -2,6 +2,53 @@
 // Style Guide Layout / Styles
 //:::::::::::::::::::::::::::::
 
+// Navigation Menu
+
+.nav-wrapper {
+   background-color: #101010;
+   @media only all and (min-width: 41em) {
+     width: 25vw;
+     height: 100vh;
+     position: fixed;
+     overflow-y: scroll;
+     float: left;
+   }
+}
+
+.nav-wrapper__list li {
+  list-style-type: none;
+  margin: 0;
+  padding: 0.65em 1.25em 0.85em;
+}
+
+.nav-wrapper__list .test-mode {
+  background-color: #952121
+}
+
+.nav-wrapper__list li:nth-child(2n) {
+  background-color: #121212;
+}
+
+.nav-wrapper__list a {
+   color: #fff;
+   border-bottom: 0.1em dotted #ccc;
+   margin: 0;
+   padding: 0;
+}
+
+// Body
+
+.body-wrapper {
+  @media only all and (min-width: 41em) {
+    float: left;
+    width: 75vw;
+    margin-left: 25vw;
+  }
+}
+
+
+// Other Guide Styles
+
 .guide {
   background-color: $grey; 
   line-height: 1.5em;
@@ -25,6 +72,10 @@
   margin-right: 0.6em;
   display: inline;
   vertical-align: -0.15em;
+}
+
+.lowercase {
+  text-transform: lowercase;
 }
 
 .versioninfo {
