Manual sections into navigation, and style tweaks

--- a/html/css/output/global.css
+++ b/html/css/output/global.css
@@ -473,6 +473,10 @@ font-family: "franklin-gothic-urw";
 .nav-wrapper__list li:nth-child(2n) {
   background-color: #121212; }
 
+.nav-wrapper__list li.nav-wrapper__list__heading {
+  color: #ce4d4d;
+  background-color: #fff; }
+
 .nav-wrapper__list a {
   color: #fff;
   border-bottom: 0.1em dotted #ccc;
@@ -575,7 +579,11 @@ h1.guidance, h2.guidance {
   font-weight: 500; }
 
 h2.guidance {
-  margin-bottom: 1.4em; }
+  margin-bottom: 0.4em; }
+
+.pattern__back-to-top {
+  display: inline-block;
+  margin-bottom: 1em; }
 
 p.guidance {
   margin-bottom: 1.4em;
