--- a/html/css/output/patterns/01-layout-cap.css
+++ b/html/css/output/patterns/01-layout-cap.css
@@ -8,8 +8,7 @@
 @media only all and (min-width: 41em) {
   .container {
     margin: 0 auto;
-    width: 90%;
-    max-width: 80em; }
+    width: 100%; }
   .header__contents {
     width: 90%;
     margin: 0 auto;
