Couple of guide tweaks

--- a/html/css/output/global.css
+++ b/html/css/output/global.css
@@ -500,6 +500,7 @@ font-family: "proxima-nova";
 
 .nav-wrapper__list a {
   color: #fff;
+  font-weight: 300;
   border-bottom: 0.1em dotted #ccc;
   margin: 0;
   padding: 0; }
@@ -603,6 +604,9 @@ iframe {
 .guide .pattern .panels {
   margin-top: 0.5em; }
 
+.guidance strong, .guidance b {
+  font-weight: 600; }
+
 h1.guidance, h2.guidance {
   color: #015966;
   text-transform: capitalize;
@@ -614,7 +618,7 @@ h2.guidance {
 .pattern__back-to-top {
   display: inline-block;
   margin-bottom: 1em;
-  margin-left: 8%; }
+  margin-left: 5%; }
 
 .pattern .pattern__back-to-top {
   margin-left: 0; }
